--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "astro dev",
+    "start": "node index.js",
+    "dev": "astro dev",
     "build": "astro build"
   },
   "devDependencies": {
-    "astro": "^0.17.3",
     "@astrojs/renderer-preact": "^0.1.3",
     "@astrojs/renderer-react": "^0.1.5",
-    "@astrojs/renderer-vue": "^0.1.3"
+    "@astrojs/renderer-vue": "^0.1.3",
+    "astro": "^0.17.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
